--- a/_config.yml
+++ b/_config.yml
@@ -16,17 +16,17 @@ timezone:
 
 title: WithoutName12 # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Cybersecurity Expert # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "withoutname12.github.io"
+url: "https://withoutname12.github.io/"
 
 github:
-  username: github_username # change to your GitHub username
+  username: WithoutName12 # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
