--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: WithoutName12 # the main title
 tagline: Cybersecurity Expert # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+     A technical blog focused on CTF writeups, ethical hacking, Linux internals, and practical cybersecurity tools. Includes hands-on guides, real-world exploit analysis, and tips for reverse engineering, OSINT, and scripting.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
