--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ social:
 
 # Site Verification Settings
 webmaster_verifications:
-  google: # fill in your Google verification code
+  google: "A3dIGGyzIXr4m_2IPfESW4gkTHv6C0BwbHyXciPwSuk"
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
